docs: update publish-subscribe